# customer-churn-prediction

./: .pre-commit-config.yaml  .travis.yml  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
models/: logistic_model.pkl  rfc_model.pkl
notebooks/: churn_notebook.ipynb
src/: churn_library.py  config.py  dataset.py  plot.py  plot_chart.py
tests/: test_churn_library.py  test_dataset.py  test_plot.py
