[flake8]
max-line-length = 100
extend-ignore = "E203, E203, E231, D100, D401"
doctests = true


[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = "True"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.pytest.ini_options]
log_file = "logs/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
